# multi-body-pendulum

./: LICENSE  README.md  n_pendulum.py  pyproject.toml  tox.ini
.github/workflow/: build.yaml
.github/workflows/: build.yaml  release.yaml
docs/tex/: n-pendulum.tex
documentation/tex/: n-pendulum.tex
multibodypendulum/: __init__.py  npendul.py
src/: n_pendulum.py
tests/: test_npendulum.py
