[tool.poetry]
name = "multibodypendulum"
version = "0.2.4"
description = "Simulates a multi-body-pendulum"
authors = ["Tue Boesen <tue.boesen@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
torch = ">=1.5"
matplotlib = ">=3.7.1"
numpy = ">=1.24.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.2"
pre-commit = ">=3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
